--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.5",
     "@nuxtjs/supabase": "^0.1.14",
     "@unocss/nuxt": "^0.34.0",
     "nuxt": "3.0.0-rc.3"
